--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\henry\\anaconda3\\envs\\DL\\python.exe"
+    "python.pythonPath": "C:\\Users\\henry\\anaconda3\\envs\\DL\\python.exe",
+    "git.ignoreLimitWarning": true
 }
