--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
-    "git.ignoreLimitWarning": true
+    "python.pythonPath": "C:\\Users\\henry\\anaconda3\\envs\\DL\\python.exe"
 }
